# OSDTK_Base

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.am.dist  Makefile.extra  NEWS  README  acinclude.m4  autogen.sh  bootstrap  configure.in  prep.sh  project.spec.in
src/: Makefile.am  foo.c  foo.h  main.c  main.h
